[package]
name = "hangman_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[dependencies]
postgres = "*"
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
sha2 = "*"

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
tonic = { version = "0.1", default-features = true, features = ["transport"]}